# cmake-learning-exampes

./: .gitignore
0-basic/A-helloworld-cmake/: CMakeLists.txt
0-basic/B-helloworld-version/: CMakeLists.txt  main.cpp  version.h.in
0-basic/C-helloworld-standard/: CMakeLists.txt  main.cpp
1-library/A-helloworld-library/: CMakeLists.txt  helloworld.cpp
1-library/B-helloworld-addlibrary/: CMakeLists.txt  main.cpp
1-library/B-helloworld-addlibrary/sayhellolibrary/: CMakeLists.txt
1-library/C-helloworld-options/: CMakeLists.txt
1-library/D-helloworld-usage-requirement/: CMakeLists.txt  config.h.in  main.cpp
1-library/D-helloworld-usage-requirement/sayhellolibrary/: CMakeLists.txt
2-install-test/A-helloworld-install/: CMakeLists.txt
2-install-test/A-helloworld-install/sayhellolibrary/: helloworld.h
3-system-introspection/A-helloworld-introspection/: CMakeLists.txt  config.h.in  helloworld.cpp
3-system-introspection/B-helloworld-compile-definition/: CMakeLists.txt  helloworld.cpp
4-installer/A-helloworld-installer/: CMakeLists.txt  main.cpp
4-installer/A-helloworld-installer/sayhellolibrary/: CMakeLists.txt  helloworld.cpp
